Add initial layout of left-side banner

--- a/index.html
+++ b/index.html
@@ -9,10 +9,19 @@
 </head>
 
 <body>
+  <div class="left-container">
+    <div class="banner">NOVUS</div>
+    <div class="attribution">Photo by <a
+        href="https://unsplash.com/@purzlbaum?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash">Claudio
+        Schwarz</a> on <a
+        href="https://unsplash.com/photos/an-aerial-view-of-a-city-with-tall-buildings-_LzXDbXtO7E?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash">Unsplash</a>
+    </div>
+  </div>
+  <div class="right-container">
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Officiis quod, aut provident perferendis accusantium
+      natus quasi modi fugit veritatis animi neque quidem in velit cum nostrum ratione rem aliquid blanditiis.</p>
+  </div>
 
 </body>
 
 </html>
-
-<!-- Photo by <a href="https://unsplash.com/@purzlbaum?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash">Claudio Schwarz</a> on <a href="https://unsplash.com/photos/an-aerial-view-of-a-city-with-tall-buildings-_LzXDbXtO7E?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash">Unsplash</a>
-   -->
