Add initial styling to right side input section

--- a/index.html
+++ b/index.html
@@ -18,8 +18,47 @@
     </div>
   </div>
   <div class="right-container">
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Officiis quod, aut provident perferendis accusantium
-      natus quasi modi fugit veritatis animi neque quidem in velit cum nostrum ratione rem aliquid blanditiis.</p>
+    <h2>This is not a real online service! You know you need something like this in your life to help you realize your
+      deepest dreams. Sign up <em>now</em> to get started.<br><br>You <em>know</em> you want to.
+    </h2>
+
+    <form action="" method="get">
+      <div class="form-input-container">
+        <h2 class="form-header">Let's do this!</h2>
+        <div class="form-row">
+          <div class="form-input">
+            <label for="first-name">FIRST NAME</label>
+            <input type="text" name="first-name" id="first-name">
+          </div>
+          <div class="form-input">
+            <label for="last-name">LAST NAME</label>
+            <input type="text" name="last-name" id="last-name">
+          </div>
+        </div>
+        <div class="form-row">
+          <div class="form-input">
+            <label for="email">EMAIL</label>
+            <input type="email" name="email" id="email">
+          </div>
+          <div class="form-input">
+            <label for="phone">PHONE NUMBER</label>
+            <input type="tel" name="phone" id="phone">
+          </div>
+        </div>
+        <div class="form-row">
+          <div class="form-input">
+            <label for="password">PASSWORD</label>
+            <input type="password" name="password" id="password">
+          </div>
+          <div class="form-input">
+            <label for="password-confirm">CONFIRM PASSWORD</label>
+            <input type="password-confirm" name="password-confirm" id="password-confirm">
+          </div>
+        </div>
+      </div>
+      <div class="form-row"><button type="submit">Create Account</button></div>
+    </form>
+    <p>Already have an account? Log in.</p>
   </div>
 
 </body>
