Add placeholder password validation warning

--- a/index.html
+++ b/index.html
@@ -86,11 +86,12 @@
         <div class="form-row">
           <div class="form-input">
             <label for="password">PASSWORD</label>
-            <input type="password" name="password" id="password">
+            <input type="password" name="password" id="password" pattern="[a]">
+            <span class="password-warning"></span>
           </div>
           <div class="form-input">
             <label for="password-confirm">CONFIRM PASSWORD</label>
-            <input type="password-confirm" name="password-confirm" id="password-confirm">
+            <input type="password-confirm" name="password-confirm" id="password-confirm" pattern="[a]">
           </div>
         </div>
       </div>
